<resources>
    <string name="app_name">Grocery Store</string>
    <string name="grocery_store">Магазин продуктов</string>
    <string name="create_store">Создать магазин</string>
    <string name="title">Название</string>
    <string name="price">Цена</string>
    <string name="add">Добавить</string>
    <string name="exit">Выйти</string>
    <string name="description">Описание</string>
    <string name="toReturn">Вернуться</string>
    <string name="save">сохранить</string>
</resources>