<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarInfo"
        app:title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        android:background="@color/toolbar_background"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageInfoIV"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:src="@drawable/baseline_shopping_basket_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titleInfoET"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/priceInfoET"
                android:hint="@string/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/descriptionInfoET"
                android:hint="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/toReturnBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toReturn"
        android:layout_gravity="center" />


</LinearLayout>