<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoreActivity"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarStore"
        app:title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        android:background="@color/toolbar_background"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editImageIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="32dp"
            android:src="@drawable/baseline_shopping_basket_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titleET"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/priceET"
                android:hint="@string/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addBTN"
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <ListView
        android:id="@+id/grocerysLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>